RESOLVED FIXED 80219
CSS 2.1 failure: margin-collapse-012 fails
https://bugs.webkit.org/show_bug.cgi?id=80219
Summary CSS 2.1 failure: margin-collapse-012 fails
Robert Hogan
Reported 2012-03-04 06:56:05 PST
Positioned blocks don't need to worry about collapsed margins, so modify RenderBlock::adjustPositionedBlock() accordingly.
Attachments
Patch (34.20 KB, patch)
2012-04-30 11:50 PDT, Robert Hogan
no flags
Patch (24.74 KB, patch)
2012-07-25 16:15 PDT, Robert Hogan
no flags
Archive of layout-test-results from gce-cr-linux-08 (300.92 KB, application/zip)
2012-07-25 16:57 PDT, WebKit Review Bot
no flags
Patch (19.83 KB, patch)
2012-07-31 11:43 PDT, Robert Hogan
no flags
Robert Hogan
Comment 1 2012-04-30 11:50:01 PDT
Robert Hogan
Comment 2 2012-05-09 11:23:53 PDT
Comment on attachment 139497 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=139497&action=review > Source/WebCore/rendering/RenderBlock.cpp:-1692 > - LayoutUnit collapsedBeforeNeg = marginInfo.negativeMargin(); I probably shouldn't have removed this line - I should come up with a test that uses a negative margin on a positioned block I guess. > Source/WebCore/rendering/RenderBlock.cpp:1692 > + logicalTop += collapsedBeforePos; And should add back in the '- collapsedBeforeNeg' here. Otherwise does it look OK?
Robert Hogan
Comment 3 2012-07-25 16:15:17 PDT
Eric Seidel (no email)
Comment 4 2012-07-25 16:48:16 PDT
Comment on attachment 154471 [details] Patch OK.
WebKit Review Bot
Comment 5 2012-07-25 16:57:40 PDT
Comment on attachment 154471 [details] Patch Attachment 154471 [details] did not pass chromium-ews (chromium-xvfb): Output: http://queues.webkit.org/results/13361215 New failing tests: compositing/overflow/clip-descendents.html css2.1/20110323/margin-collapse-012.htm
WebKit Review Bot
Comment 6 2012-07-25 16:57:43 PDT
Created attachment 154489 [details] Archive of layout-test-results from gce-cr-linux-08 The attached test failures were seen while running run-webkit-tests on the chromium-ews. Bot: gce-cr-linux-08 Port: <class 'webkitpy.common.config.ports.ChromiumXVFBPort'> Platform: Linux-2.6.39-gcg-201203291735-x86_64-with-Ubuntu-10.04-lucid
Robert Hogan
Comment 7 2012-07-26 09:57:10 PDT
(In reply to comment #5) > (From update of attachment 154471 [details]) > Attachment 154471 [details] did not pass chromium-ews (chromium-xvfb): > Output: http://queues.webkit.org/results/13361215 > > New failing tests: > compositing/overflow/clip-descendents.html > css2.1/20110323/margin-collapse-012.htm My tree was a bit skew-whiff when I uploaded, so these are false positives. The change is good - I'll upload for a clean EWS before landing anyway.
Robert Hogan
Comment 8 2012-07-31 11:43:02 PDT
Robert Hogan
Comment 9 2012-08-01 11:18:12 PDT
WebKit Review Bot
Comment 10 2012-08-01 11:20:28 PDT
Comment on attachment 155597 [details] Patch Cleared review? from attachment 155597 [details] so that this bug does not appear in http://webkit.org/pending-review. If you would like this patch reviewed, please attach it to a new bug (or re-open this bug before marking it for review again).
Robert Hogan
Comment 11 2012-08-01 13:38:20 PDT
Rebaselines happening under http://webkit.org/b/92904
Note You need to log in before you can comment on or make changes to this bug.