CSS 2.1 failure: margin-collapse-012 fails https://bugs.webkit.org/show_bug.cgi?id=80219

Reviewed by Eric Seidel.

Source/WebCore:

Tests: css2.1/20110323/margin-collapse-012.htm
       fast/css/margin-collapse-abspos-negmargin.htm

I also ran this against the full margin-collapse-* CSS 2.1 suite without regressions.

Per http://www.w3.org/TR/CSS21/box.html#collapsing-margins don't collapse the margins of
positioned blocks. Instead, just use the margin of the sibling/container to offset the
positioned block's logical top - its own margin gets added in later at
RenderBox::computePositionedLogicalHeightUsing().

* rendering/RenderBlock.cpp:
(WebCore::RenderBlock::adjustPositionedBlock):

LayoutTests:

* css2.1/20110323/margin-collapse-012.htm: Added.
* css2.1/20110323/margin-collapse-012-expected.html: Added.
* fast/css/margin-collapse-abspos-negmargin-expected.html: Added.
* fast/css/margin-collapse-abspos-negmargin.htm: Added.

* fast/block/positioning/auto/001.html:
* fast/block/positioning/auto/002.html:
* fast/block/positioning/auto/vertical-lr/002.html:
* fast/block/positioning/auto/vertical-rl/002.html:
* fast/dynamic/staticY.html:
  Remove the margins from these tests so the results remain the same. The new results
  are consistent with FF.

* platform/chromium-linux/fast/box-sizing/box-sizing-expected.png:
* platform/chromium-win/compositing/overflow/clip-descendents-expected.txt:
* platform/chromium-win/fast/box-sizing/box-sizing-expected.txt:
  I've rebaselined these - removing the margins doesn't seem helpful.

Canonical link: https://commits.webkit.org/110718@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@124347 268f45cc-cd09-0410-ab3c-d52691b4dbfc